ingress-nginx/test-ingress/dashbord-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard
  namespace: istio-system
  annotations:
    # nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: k8s.dashboard.com
    http:
      paths:
      - path: /jaeger
        pathType: Prefix
        backend:
          service:
            name: tracing
            port:
              number: 80
      - path: /kiali
        pathType: Prefix
        backend:
          service:
            name: kiali
            port:
              number: 20001
      # - path: /
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: tracing
      #       port:
      #         number: 80
      # 新增grafana 端口 3000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
